# laria

./: CODE_OF_CONDUCT.md  COPYRIGHT.md  Cargo.toml  README.md  bors.toml  rustfmt.toml  test.lri
.github/workflows/: rust.yml
docs/: design.md
examples/: extern.lri  fn_order.lri  module.lri  never.lri  no_main.lri  return.lri  test.lri  tuple.lri  type_error.lri  types.lri
laria/: Cargo.toml
laria/src/: main.rs
laria_backend/: Cargo.toml
laria_backend/src/: expand.rs  lib.rs
laria_backend/src/errors/: builder.rs  mod.rs  span.rs
laria_backend/src/features/: compiler.rs  mod.rs
laria_backend/src/hir/: hir_tree.rs  lower.rs  mod.rs  typecheck.rs  types.rs
laria_backend/src/lexer/: mod.rs  tests.rs  token.rs
laria_backend/src/lower/: lower_to_vm.rs  mod.rs
laria_backend/src/name_resolution/: mod.rs  scopes.rs
laria_backend/src/parser/: ast.rs  expected.rs  keyword.rs  mod.rs  tests.rs
laria_backend/src/script/: ast.rs  lower_to_vm.rs
laria_backend/src/script/parser/: expected.rs  mod.rs  tests.rs
laria_backend/src/unstable_features/: compiler.rs
laria_compiler/: Cargo.toml
laria_compiler/src/: lib.rs  token.rs
laria_compiler/src/errors/: builder.rs  mod.rs  span.rs
laria_compiler/src/lexer/: mod.rs
laria_compiler/src/script/: ast.rs  lower_to_vm.rs  mod.rs
laria_compiler/src/script/parser/: expected.rs  keyword.rs  mod.rs  tests.rs
laria_compiler/src/spriteset/: ast.rs  lower.rs  mod.rs
laria_compiler/src/spriteset/parser/: expected.rs  keyword.rs  mod.rs  tests.rs
laria_disassembler/: Cargo.toml
laria_disassembler/src/: lib.rs
laria_log/: Cargo.toml
laria_log/src/: lib.rs
laria_vm/: Cargo.toml
laria_vm/src/: instructions.rs  lib.rs  stack_frame.rs  subroutine.rs  value.rs
laria_vm/src/vm/: mod.rs  tick.rs
laria_vscode/: language-configuration.json  package.json
laria_vscode/syntaxes/: laria.tmLanguage.json
src/: main.rs
