[package]
name = "laria"
description = "The frontend binary to the Laria interpreter/compiler"
license = "MIT"
version = "0.1.0"
authors = ["Ruby Lazuli <nipkraps@gmail.com>"]
edition = "2018"

[dependencies]
laria_backend = { path = "../laria_backend" }
laria_log = { path = "../laria_log" }
laria_vm = { path = "../laria_vm" }
pico-args = { version = "0.3.4", features = ["short-space-opt"] }
rustc_version_runtime = "0.2.0"
