[package]
name = "laria_backend"
description = "The Laria compiler"
license = "MIT"
version = "0.1.0"
authors = ["Ruby Lazuli <nipkraps@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
annotate-snippets = { version = "0.9.0", features = ["color"] }
laria_log = { path = "../laria_log" }
laria_vm = { path = "../laria_vm" }
thiserror = "1.0.21"
decorum = "0.3.1"

[dev-dependencies]
proptest = "0.10.1"
