[package]
name = "laria_compiler"
description = "The Laria compiler"
license = "MIT"
version = "0.1.0"
authors = ["Ruby Lazuli <nipkraps@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
annotate-snippets = { version = "0.9.0", features = ["color"] }
laria_vm = { path = "../laria_vm" }
thiserror = "1.0.21"
